https://bugs.webkit.org/show_bug.cgi?id=64900 Function.prototype.apply should accept an array-like object as its second argument

Reviewed by Sam Weinig.

Source/JavaScriptCore:

* interpreter/Interpreter.cpp:
(JSC::Interpreter::privateExecute):
* jit/JITStubs.cpp:
(JSC::DEFINE_STUB_FUNCTION):
* runtime/FunctionPrototype.cpp:
(JSC::functionProtoFuncApply):
    - Remove the type error if object is not an array.

LayoutTests:

* fast/js/function-apply-expected.txt:
* fast/js/script-tests/function-apply.js:
    - Add a test for array-like objects.
* sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T1-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.4/15.3.4.3_Function.prototype.apply/S15.3.4.3_A6_T4-expected.txt:
    - These tests are incorrect & assert ES3 behaviour.



Canonical link: https://commits.webkit.org/80702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91483 268f45cc-cd09-0410-ab3c-d52691b4dbfc