LayoutTests/fast/js/script-tests/function-apply.js
@@ -1,4 +1,4 @@
-description('Tests to ensure that Function.apply works correctly for Arrays and arguments.');
+description('Tests to ensure that Function.apply works correctly for Arrays, arguments and array-like objects.');
 
 function argumentsApply1(a, b, c)
 {
@@ -290,5 +290,8 @@ shouldBe("var a = []; a.length = 0x10000; [].constructor.apply('', a).length", "
 shouldBe("var a = []; a.length = 0x10001; [].constructor.apply('', a).length", "0x10000");
 shouldBe("var a = []; a.length = 0xFFFFFFFE; [].constructor.apply('', a).length", "0x10000");
 shouldBe("var a = []; a.length = 0xFFFFFFFF; [].constructor.apply('', a).length", "0x10000");
+
+// ES5 permits apply with array-like objects.
+shouldBe("(function(a,b,c,d){ return d ? -1 : (a+b+c); }).apply(undefined, {length:3, 0:100, 1:20, 2:3})", '123');
 
 var successfullyParsed = true;
